2007-03-25  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/atoi.S: Exclude the '!=' operator from GAS expression
	to comport with the old GAS versions (less than 2.17).
	* libc/stdlib/atol.S: (Ditto.)
	* libc/string/strcasestr.S: (Ditto.)

2007-03-17  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix bug #19280: snprintf(s,0,fmt,...) write to foreign memory: s[-1]
	* libc/stdio/snprintf.c: Add check of 'f.size >= 0' before writing
	of terminating zero. Use f.len as number of output symbols. Remove
	include of "stdio_private.h" as noused (after moving FILE decl.).
	* libc/stdio/snprintf_p.c: (Ditto.)
	* libc/stdio/vsnprintf.c: (Ditto.)
	* libc/stdio/vsnprintf_p.c: (Ditto.)
	* tests/simulate/printf/snprintf_all-P.c: New file.
	* tests/simulate/printf/snprintf_all.c: New file.
	* tests/simulate/printf/vsnprintf_all-P.c: New file.
	* tests/simulate/printf/vsnprintf_all.c: New file.
	* tests/simulate/regression/bug-19280.c: New file.

	* tests/simulate/regression/bug-19281.c: New file.

2007-03-11  Dmitry Xmelkov  <dmix@gmail.ru>

	Has partially restored former (avr-libc 1.4 and early) behaviour
	at mistakes in a format string. Processing will be stopped (as in
	last versions),	but return value will be 'len', not EOF. This is
	more clean behavior. (In comparison, Glibc's printf() return -1 if
	there is nothing specificator and continue work for other mistakes.)
	Note, snprintf() function (all 4 variants) has an error, which
	activates if vfprintf() returns EOF.
	* libc/stdio/vfprintf.c: Return EOF only if file is not open for
	writing, return 'len' for all other cases.
	* include/stdio.h: Update doc about return value.
	* tests/simulate/printf/sprintf-inv.c: Update.
	* tests/simulate/printf/sprintf_min-inv.c: Update.

2007-03-10  Dmitry Xmelkov  <dmix@gmail.ru>

	Rewrite the PRINTF_MIN part of vfprintf() function to reduce size
	and increase speed. Other parts (STD and FLT) was rewriten at
	begin of Feb 2007.
	* libc/stdio/vfprintf.c: Rewrite the PRINTF_MIN part. Make a few of